# g4g

./: .gitignore  meson.build
ctci/: meson.build
ctci/1.1-unique-chars/: meson.build
ctci/1/1.1-unique-chars/: unique.cc
ctci/1/1.2/: permutation.cc
ctci/1/1.2-check-permutation/: meson.build
ctci/1/1.3-urlify/: meson.build  urlify.cc
ctci/1/1.4-palindrome-permutation/: meson.build  palindrome  palindrome.cc
ctci/1/1.5/: one-away.cc
ctci/1/1.5-one-away/: meson.build  one-away
ctci/1/1.6/: compression.cc
ctci/1/1.7/: rotate90.cc
ctci/1/1.8/: zero-matrix.cc
ctci/2/2.1/: remove-dups.cc
g4g/: build.sh  meson.build
g4g/kth-smallest-element/: test.txt
g4g/node-at-even-distance/: main  meson.build
g4g/x-total-shapes/: meson.build  test-1.txt
kth-smallest-element/: README  main.cc  meson.build
node-at-even-distance/: Node.cc  Node.hpp  main.cc  meson.build  test.cc  tests.txt
x-total-shapes/: README.md
x-total-shapes/cxx/: Makefile  brute-force.cc  meson.build
x-total-shapes/meta/: test-1.txt
